# ufmg-ecd-monografia-eda

./: .gitignore  README.md  _quarto.yml  preview.sh  pyproject.toml  requirements.txt
notebooks/: .gitignore  01-htg-import-eda.html  01-htg-import-eda.qmd  02-htg-correlation-analysis.html  02-htg-correlation-analysis.qmd  03-htg-time-series-analysis.html  03-htg-time-series-analysis.qmd  03-htg-time-series-visualization.html  03-htg-time-series-visualization.qmd  04-htg-time-series-analysis.html  04-htg-time-series-analysis.qmd  05-htg-arima-models.html  05-htg-arima-models.qmd  06-htg-glarma-model.html  06-htg-glarma-model.qmd
