[project]
name = "ufmg-ecd-monografia-eda"
version = "0.1.0"
description = ""
authors = [
    {name = "htgalassi",email = "htgalassi@ihm.com.br"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "quarto (>=0.1.0,<0.2.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "numpy (>=2.4.3,<3.0.0)",
    "statsmodels (>=0.14.6,<0.15.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "plotly (>=6.6.0,<7.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
